email templates change

--- a/public/email-templates/sebastian-ochocinski.html
+++ b/public/email-templates/sebastian-ochocinski.html
@@ -2,37 +2,37 @@
 <HTML><HEAD><TITLE>Email Signature</TITLE>
 <META content="text/html; charset=utf-8" http-equiv="Content-Type">
 </HEAD>
-<BODY style="font-size: 9pt; font-family: Arial, sans-serif; background: #121212" >
+ <BODY style="font-size: 9pt; font-family: Arial, sans-serif; background: transparent !important;" >
 
-<table style="width: 500px; font-size: 9pt; FONT-FAMILY: Arial, sans-serif; background: transparent !important;" cellpadding="0" cellspacing="0" border="0">
+ <table style="width: 500px; font-size: 9pt; FONT-FAMILY: Arial, sans-serif; background: #fff !important;" cellpadding="0" cellspacing="0" border="0">
     <tbody>
         <tr>
-            <td style="width: 143px; vertical-align: top; padding-top: 5px; border-right: 1px solid #E0E0E0" valign="top">
+            <td style="width: 143px; vertical-align: top; padding-top: 5px; border-right: 2px solid #161616;" valign="top">
                 <img src="https://www.grandtransportlogistics.pl/email-templates/sebastian-ochocinski-avatar.png" alt="photograph" width="116" border="0" style="border:0; border-radius:50%; height:auto; width:116px; background-color: #5b5e5c"/>
             </td>
             <td style="width: 26px;"></td>
             <td style="width: 331px;">
-                <span style="font-size: 12pt; font-family: Arial, sans-serif; color:#E0E0E0; font-weight: bold;">Sebastian Ochociński<br></span>
-                <span style="font-family: Arial, sans-serif; font-size: 9pt; line-height: 16px; color:#E0E0E0;"><strong>Spedytor międzynarodowy</strong><br></span>
+                <span style="font-size: 12pt; font-family: Arial, sans-serif; color:#161616; font-weight: bold;">Sebastian Ochociński<br></span>
+                <span style="font-family: Arial, sans-serif; font-size: 9pt; line-height: 16px; color:#161616;"><strong>Spedytor międzynarodowy</strong><br></span>
         
                 <p style="padding-top: 18px; padding-bottom: 0px; margin: 0px; font-size: 9pt; line-height: 16px;">
 
-                    <span style="font-size: 9pt; line-height: 16px; color:#E0E0E0;">
-                        <strong>telefon:</strong> <span style="color:#E0E0E0;">+48 733 899 141</span><span style="font-size: 9pt; line-height: 16px; color:#E0E0E0;"> </span>
+                    <span style="font-size: 9pt; line-height: 16px; color:#161616;">
+                        <strong>telefon:</strong> <span style="color:#161616;">+48 733 899 141</span><span style="font-size: 9pt; line-height: 16px; color:#161616;"> </span>
                     </span>
                     </br>
 
                     
-                    <span style="FONT-FAMILY: Arial, sans-serif; font-size: 9pt; line-height: 16px; color:#E0E0E0;">
-                        <strong>email:</strong> <a href="mailto:s.ochocinski@grandtransportlogistics.pl" style="font-size: 9pt; color:#E0E0E0; text-decoration: none;"><span style="text-decoration: none; font-size: 9pt;  line-height: 16px; color:#E0E0E0; FONT-FAMILY: Arial, sans-serif;">s.ochocinski@grandtransportlogistics.pl</span></a>
+                    <span style="FONT-FAMILY: Arial, sans-serif; font-size: 9pt; line-height: 16px; color:#161616;">
+                        <strong>email:</strong> <a href="mailto:s.ochocinski@grandtransportlogistics.pl" style="font-size: 9pt; color:#161616; text-decoration: none;"><span style="text-decoration: none; font-size: 9pt;  line-height: 16px; color:#161616; FONT-FAMILY: Arial, sans-serif;">s.ochocinski@grandtransportlogistics.pl</span></a>
 
                     </span>
 
 
                     <span style="line-height: 16px; "><br></span>
 
-                    <span style="font-size: 9pt; line-height: 16px; color:#E0E0E0;">
-                        <strong>www:</strong> <span style="color:#E0E0E0;"><a href="https://grandtransportlogistics.pl" style="color:#E0E0E0;">grandtransportlogistics.pl</a></span><span style="font-size: 9pt; line-height: 16px; color:#846d53;"> </span>
+                    <span style="font-size: 9pt; line-height: 16px; color:#161616;">
+                        <strong>www:</strong> <span style="color:#161616;"><a href="https://grandtransportlogistics.pl" style="color:#161616;">grandtransportlogistics.pl</a></span><span style="font-size: 9pt; line-height: 16px; color:#846d53;"> </span>
                     </span>
                 </p>                
             </td>
