--- a/public/email-templates/oscar-nowak.html
+++ b/public/email-templates/oscar-nowak.html
@@ -12,17 +12,21 @@
             </td>
             <td style="width: 26px;"></td>
             <td style="width: 331px;">
-                <span style="font-size: 12pt; font-family: Arial, sans-serif; color:#161616; font-weight: bold;">Oscar Nowak<br></span>
-                <span style="font-family: Arial, sans-serif; font-size: 9pt; line-height: 16px; color:#161616;"><strong>Spedytor międzynarodowy</strong><br></span>
-        
-                <p style="padding-top: 18px; padding-bottom: 0px; margin: 0px; font-size: 9pt; line-height: 16px;">
+                <p style="padding: 15px; background-color: #000; display: inline-block; border-radius: 5px; margin-top: 0; margin-bottom: 0;">
+                    <img src="https://www.grandtransportlogistics.pl/assets/images/logo.png" alt="photograph" width="116" border="0" style="border:0; height:auto; width:116px; background-color: #000"/>
+                </p>
+                <p style="margin-top: 20px;">
+                    <span style="font-size: 12pt; font-family: Arial, sans-serif; color:#161616; font-weight: bold;">Oscar Nowak<br></span>
+                    <span style="font-family: Arial, sans-serif; font-size: 9pt; line-height: 16px; color:#161616;"><strong>Spedytor międzynarodowy</strong><br></span>
+                </p>
+                <p style="padding-top: 5px; padding-bottom: 0px; margin: 0px; font-size: 9pt; line-height: 16px;">
 
                     <span style="font-size: 9pt; line-height: 16px; color:#161616;">
                         <strong>telefon:</strong> <span style="color:#161616;">+48 733 899 108</span><span style="font-size: 9pt; line-height: 16px; color:#161616;"> </span>
                     </span>
                     </br>
 
-                    
+
                     <span style="FONT-FAMILY: Arial, sans-serif; font-size: 9pt; line-height: 16px; color:#161616;">
                         <strong>email:</strong> <a href="mailto:o.nowak@grandtransportlogistics.pl" style="font-size: 9pt; color:#161616; text-decoration: none;"><span style="text-decoration: none; font-size: 9pt;  line-height: 16px; color:#161616; FONT-FAMILY: Arial, sans-serif;">o.nowak@grandtransportlogistics.pl</span></a>
 
@@ -34,7 +38,7 @@
                     <span style="font-size: 9pt; line-height: 16px; color:#161616;">
                         <strong>www:</strong> <span style="color:#161616;"><a href="https://grandtransportlogistics.pl" style="color:#161616;">grandtransportlogistics.pl</a></span><span style="font-size: 9pt; line-height: 16px; color:#846d53;"> </span>
                     </span>
-                </p>                
+                </p>
             </td>
         </tr>
     </tbody>
